--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,14 @@
 [package]
 name = "memwbot"
-version = "0.1.0"
+version = "0.0.1"
 edition = "2024"
+
+[profile.release]
+lto = true
+codegen-units = 1
+opt-level = "z"
+debug = false
+panic = "abort"
 
 [dependencies]
 config = "0.15.18"
